# napari-wsireg

./: .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.md  config.yml
docs/: conf.py  index.rst
src/napari_wsireg/: _widget.py  napari.yaml
src/napari_wsireg/_tests/: test_widget.py  test_wsireg_2d_main.py
src/napari_wsireg/_tests/fixtures/: im_fixtures.py  test-anno-data.geojson
src/napari_wsireg/data/: __init__.py  czi_image.py  tifffile_image.py  wsireg_image.py
src/napari_wsireg/data/_tests/: test_czi_image.py  test_tifffile_image.py
src/napari_wsireg/data/utils/: czi.py  graph.py  image.py  shapes.py  tifffile_meta.py  transform.py
src/napari_wsireg/gui/: setup_gui.py
src/napari_wsireg/gui/dialogs/: add_merge.py  add_modality.py
src/napari_wsireg/gui/dialogs/_tests/: test_gui_dialogs.py
src/napari_wsireg/gui/queue/: __init__.py  queue.py
src/napari_wsireg/gui/setup_sub/: graph.py  modality.py  paths.py  preprocessing.py  project.py
src/napari_wsireg/gui/utils/: colors.py  file.py
