[metadata]
name = napari-wsireg

author = Nathan Heath Patterson
author_email = heath.patterson@vanderbilt.edu
url = https://github.com/nhpatterson/napari-wsireg
license = BSD-3-Clause
description = plugin to do whole slide image registration with wsireg
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/nhpatterson/napari-wsireg/issues
    Documentation = https://github.com/nhpatterson/napari-wsireg#README.md
    Source Code = https://github.com/nhpatterson/napari-wsireg
    User Support = https://github.com/nhpatterson/napari-wsireg/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-wsireg = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-wsireg = napari_wsireg:napari.yaml
