[metadata]
name = napari_wsireg
description = plugin to do whole slide image registration with wsireg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nhpatterson/napari-wsireg
author = Nathan Heath Patterson
author_email = heath.patterson@vanderbilt.edu
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/nhpatterson/napari-wsireg/issues
    Documentation = https://github.com/nhpatterson/napari-wsireg#README.md
    Source Code = https://github.com/nhpatterson/napari-wsireg
    User Support = https://github.com/nhpatterson/napari-wsireg/issues

[options]
packages = find:
install_requires =
    napari[all]
    SimpleITK
    czifile
    dask
    imagecodecs
    napari
    numpy
    ome-types
    pint
    qtpy
    tifffile
    zarr==2.10.3
    wsireg
    napari-geojson
    networkx

python_requires = >=3.7
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-wsireg = napari_wsireg:napari.yaml

[options.package_data]
napari_wsireg =
    napari.yaml
